# tdb

./: .gitignore  Makefile.in  README.md  configure  configure.ac  pkgIndex.tcl
.github/workflows/: ci.yml
docs/: tcl85_ptrdiff.patch  usage.md
generic/: tdb_engine.c
scripts/: find-tclsh.sh  install-tcl86-from-source.sh  install-tcl86-macos.sh  tdb-dap.tcl  tdb-repl.tcl  test-matrix.sh
tclconfig/: tcl.m4
tests/: 00_smoke.test  01_config.test  10_break_api.test  11_break_fileline_hit.test  11_break_proc_hit.test  12_break_method.test  13_break_cond_hitcount_log.test  13_method_cond_hitcount_log.test  13_proc_cond_hitcount_log.test  14_pause_plumbing.test  15_trace_install.test  16_trace_fastpath.test  17_reentry_cleanup.test  20_step_basic.test  22_rununtil_and_runtoline.test  30_frames_and_eval.test  40_control_constructs_builtin.test  41_control_constructs_custom.test  90_perf_smoke.test  all.tcl
